Mobile grid fix

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         <div class="row">
           <div class="col-md-6">
             <h1 class="display-4">Oseos server ARG</h1>
-            <p class="lead my-3">Un proyecto de Estonian Port <a class="icon" href="https://www.linkedin.com/company/estonianport" target="_blank"><i class="fa fa-linkedin"></i></a>
-</p>
+            <p class="lead my-3">Un proyecto de Estonian Port <a class="icon" href="https://www.linkedin.com/company/estonianport" target="_blank"><i class="fa fa-linkedin"></i></a></p>
           </div>
           <div class="col-md-6 text-center mt-5">
             <img class="discord" src="img/discord.png" alt="Snow">
@@ -69,13 +68,18 @@
 
               <div class="col-lg-4">
                 <img class="rounded-circle" src="img/color/gm.png" alt="Generic placeholder image" width="140" height="140">
-                <h2>Garrys mod</h2>                
-                <iframe src="https://cache.gametracker.com/components/html0/?host=181.116.18.243:27016&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
-                <p class="ip">IP: oseos.chickenkiller.com:27016 (Cinema)</p>
-                <a class="btn btn-info mb-4" href="#" role="button">Web Admin »</a>  
-                <iframe src="https://cache.gametracker.com/components/html0/?host=181.116.18.243:27017&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
-                <p class="ip">IP: oseos.chickenkiller.com:27017 (PropHunt)</p>
-                <a class="btn btn-info" href="#" role="button">Web Admin »</a>
+                <h2>Garrys mod</h2>
+                <div>
+                  <iframe src="https://cache.gametracker.com/components/html0/?host=181.116.18.243:27016&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
+                  <p class="ip">IP: oseos.chickenkiller.com:27016 (Cinema)</p>
+                  <a class="btn btn-info mb-4" href="#" role="button">Web Admin »</a>
+                </div>
+
+                <div>
+                  <iframe src="https://cache.gametracker.com/components/html0/?host=181.116.18.243:27017&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
+                  <p class="ip">IP: oseos.chickenkiller.com:27017 (PropHunt)</p>
+                  <a class="btn btn-info" href="#" role="button">Web Admin »</a>
+                </div>
               </div><!-- /.col-lg-4 -->
 
               <div class="col-lg-4">
