--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
 
     <div class="jumbotron text-white banner">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
           <h1 class="display-4">Oseos server ARG</h1>
           <p class="lead my-3">Un proyecto de Estonian Port <a class="icon" href="https://www.linkedin.com/company/estonianport" target="_blank"><i class="fa fa-linkedin"></i></a></p>
         </div>
-        <div class="col-md-6 text-center mt-5">
-          <img class="discord" src="img/discord.png" alt="Snow">
-          <a href="https://discord.gg/gbQAkZ4" class="stretched-link"></a>
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+          <div class="text-center mt-5">
+            <img class="discord" src="img/discord.png" alt="Snow">
+            <a href="https://discord.gg/gbQAkZ4" class="stretched-link"></a>
+          </div>
         </div>
       </div>
     </div>
@@ -34,9 +36,9 @@
   <!--  ======================= Games Area ================================ -->
 
     <div class="container">
-      <div class="row display-flex row-cols-sm-1 row-cols-lg-3 text-center">
+      <div class="row text-center">
 
-        <div class="col">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/color/mc.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Minecraft</h2>
           <iframe src="https://cache.gametracker.com/components/html0/?host=181.116.18.243:25565&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
@@ -44,7 +46,7 @@
           <a class="btn btn-info" href="#" role="button">Web Admin »</a>
         </div>
         
-        <div class="col">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/cs.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Counter Stike 1.6</h2>
           <iframe src="https://cache.gametracker.com/components/html0/?host=181.116.18.243:27020&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
@@ -52,7 +54,7 @@
           <a class="btn btn-info" href="#" role="button">Web Admin »</a>
         </div>
         
-        <div class="col">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/color/q3.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Quake 3</h2>
           <iframe src="https://cache.gametracker.com/components/html0/?host=181.116.18.243:27960&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
@@ -60,7 +62,7 @@
           <a class="btn btn-info" href="#" role="button">Web Admin »</a>
         </div>
 
-        <div class="col">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/color/gm.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Garrys mod</h2>
           <div>
@@ -76,7 +78,7 @@
           </div>
         </div>
 
-        <div class="col">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/color/dod.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Day Of Defeat</h2>
           <iframe src="https://cache.gametracker.com/components/html0/?host=181.116.18.243:27015&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
@@ -84,7 +86,7 @@
           <a class="btn btn-info" href="#" role="button">Web Admin »</a>
         </div>
 
-        <div class="col">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/color/kf.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Killing Floor</h2>
           <iframe src="https://cache.gametracker.com/components/html0/?host=181.116.18.243:7707&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
