Adjustment in banner area

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
     <div class="jumbotron text-white banner">
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-          <h1 class="display-4">Oseos server ARG</h1>
-          <p class="lead my-3">Un proyecto de Estonian Port <a class="icon" href="https://www.linkedin.com/company/estonianport" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+          <h1 class="title display-4">Oseos server ARG</h1>
+          <p class="subtitle lead my-3">Un proyecto de Estonian Port <a class="icon" href="https://www.linkedin.com/company/estonianport" target="_blank"><i class="fa fa-linkedin"></i></a></p>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
           <div class="text-center mt-5">
-            <img class="discord" src="img/discord.png" alt="Snow">
+            <img class="discord img-responsive" src="img/discord.png" alt="Snow">
             <a href="https://discord.gg/gbQAkZ4" class="stretched-link"></a>
           </div>
         </div>
