--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/color/mc.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Minecraft</h2>
-          <iframe src="https://cache.gametracker.com/components/html0/?host=181.116.18.243:25565&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
+          <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:25565&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
           <p class="ip">IP: oseos.chickenkiller.com:25565</p>
           <a class="btn btn-info" href="#" role="button">Web Admin »</a>
         </div>
@@ -54,15 +54,24 @@
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/cs.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Counter Stike 1.6</h2>
-          <iframe src="https://cache.gametracker.com/components/html0/?host=181.116.18.243:27020&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
+          <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27020&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
           <p class="ip">IP: oseos.chickenkiller.com:27020</p>
           <a class="btn btn-info" href="login/login.html?admin=cs" role="button">Web Admin »</a>
         </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+          <img class="rounded-circle" src="img/cs.png" alt="Generic placeholder image" width="140" height="140">
+          <h2>Counter Stike 1.6 no steam</h2>
+          <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27019&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
+          <p class="ip">IP: oseos.chickenkiller.com:27019</p>
+          <a class="btn btn-info" href="login/login.html?admin=cs" role="button">Web Admin »</a>
+        </div>
+
         
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/color/q3.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Quake 3</h2>
-          <iframe src="https://cache.gametracker.com/components/html0/?host=181.116.18.243:27960&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
+          <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27960&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
           <p class="ip">IP: oseos.chickenkiller.com:27960</p>
           <a class="btn btn-info" href="#" role="button">Web Admin »</a>
         </div>
@@ -70,14 +79,14 @@
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/color/gm.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Garrys mod</h2>
-          <div>
-            <iframe src="https://cache.gametracker.com/components/html0/?host=181.116.18.243:27016&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
+          <!-- div>
+            <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27016&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
             <p class="ip">IP: oseos.chickenkiller.com:27016 (Cinema)</p>
             <a class="btn btn-info mb-4" href="#" role="button">Web Admin »</a>
-          </div>
+          </div -->
 
           <div>
-            <iframe src="https://cache.gametracker.com/components/html0/?host=181.116.18.243:27017&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
+            <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27017&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
             <p class="ip">IP: oseos.chickenkiller.com:27017 (PropHunt)</p>
             <a class="btn btn-info" href="#" role="button">Web Admin »</a>
           </div>
@@ -86,7 +95,7 @@
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/color/dod.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Day Of Defeat</h2>
-          <iframe src="https://cache.gametracker.com/components/html0/?host=181.116.18.243:27015&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
+          <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27015&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
           <p class="ip">IP: oseos.chickenkiller.com:27015</p>
           <a class="btn btn-info" href="#" role="button">Web Admin »</a>
         </div>
@@ -94,7 +103,7 @@
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/color/kf.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Killing Floor</h2>
-          <iframe src="https://cache.gametracker.com/components/html0/?host=181.116.18.243:7707&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
+          <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:7707&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
           <p class="ip">IP: oseos.chickenkiller.com:7707</p>
           <a class="btn btn-info" href="http://oseos.chickenkiller.com:8075/ServerAdmin/" role="button">Web Admin »</a>
         </div>
