--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+	<meta charset="utf-8">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 
-  <link rel="stylesheet" href="css/main.css" type="text/css">
+	<link rel="stylesheet" href="css/main.css" type="text/css">
 
-  <!-- Fontawesome -->
-  <script src="https://use.fontawesome.com/4cfb984545.js"></script>
+	<!-- Fontawesome -->
+	<script src="https://use.fontawesome.com/4cfb984545.js"></script>
 
-  <script src="js/main.js"></script>
+	<script src="js/main.js"></script>
 
-  <title>Oseos</title>
+	<title>Oseos</title>
 </head>
 
   <body>
@@ -123,7 +123,9 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    
+    <!-- bootstrap js -->
+    <script src="js/bootstrap.min.js"></script>
 
     <!-- Fontawesome -->
     <script src="https://use.fontawesome.com/4cfb984545.js"></script>
