Add Team Fortress 2 server and Minecraft Dropper / Skywars servers

--- a/index.html
+++ b/index.html
@@ -45,12 +45,36 @@
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/color/mc.png" alt="Generic placeholder image" width="140" height="140">
-          <h2>Minecraft</h2>
+          <h2>Minecraft (Survival)</h2>
           <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:25565&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
           <p class="ip">IP: oseos.chickenkiller.com:25565</p>
           <a class="btn btn-info" href="#" role="button">Web Admin »</a>
         </div>
-        
+
+        <!--<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+          <img class="rounded-circle" src="img/color/mc.png" alt="Generic placeholder image" width="140" height="140">
+          <h2>Minecraft (Dropper)</h2>
+          <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:25575&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
+          <p class="ip">IP: oseos.chickenkiller.com:25575</p>
+          <a class="btn btn-info" href="#" role="button">Web Admin »</a>
+        </div>-->
+
+        <!--<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+          <img class="rounded-circle" src="img/color/mc.png" alt="Generic placeholder image" width="140" height="140">
+          <h2>Minecraft (SkyWars)</h2>
+          <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:25585&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
+          <p class="ip">IP: oseos.chickenkiller.com:25585</p>
+          <a class="btn btn-info" href="#" role="button">Web Admin »</a>
+        </div>-->
+
+		<!--<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+          <img class="rounded-circle" src="img/cs.png" alt="Generic placeholder image" width="140" height="140">
+          <h2>Counter Stike 1.6 (no steam)</h2>
+          <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27019&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
+          <p class="ip">IP: oseos.chickenkiller.com:27019</p>
+          <a class="btn btn-info" href="login/login.html?admin=cs" role="button">Web Admin »</a>
+        </div> -->
+
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/cs.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Counter Stike 1.6</h2>
@@ -60,15 +84,6 @@
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-          <img class="rounded-circle" src="img/cs.png" alt="Generic placeholder image" width="140" height="140">
-          <h2>Counter Stike 1.6 no steam</h2>
-          <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27019&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
-          <p class="ip">IP: oseos.chickenkiller.com:27019</p>
-          <a class="btn btn-info" href="login/login.html?admin=cs" role="button">Web Admin »</a>
-        </div>
-
-        
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/color/q3.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Quake 3</h2>
           <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27960&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
@@ -77,19 +92,11 @@
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-          <img class="rounded-circle" src="img/color/gm.png" alt="Generic placeholder image" width="140" height="140">
-          <h2>Garrys mod</h2>
-          <!-- div>
-            <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27016&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
-            <p class="ip">IP: oseos.chickenkiller.com:27016 (Cinema)</p>
-            <a class="btn btn-info mb-4" href="#" role="button">Web Admin »</a>
-          </div -->
-
-          <div>
-            <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27017&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
-            <p class="ip">IP: oseos.chickenkiller.com:27017 (PropHunt)</p>
-            <a class="btn btn-info" href="#" role="button">Web Admin »</a>
-          </div>
+          <img class="rounded-circle" src="img/color/tf2.png" alt="Generic placeholder image" width="140" height="140">
+          <h2>Team Fortress 2</h2>
+          <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27014&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
+          <p class="ip">IP: oseos.chickenkiller.com:27014</p>
+          <a class="btn btn-info" href="login/login.html?admin=cs" role="button">Web Admin »</a>
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
@@ -99,6 +106,36 @@
           <p class="ip">IP: oseos.chickenkiller.com:27015</p>
           <a class="btn btn-info" href="#" role="button">Web Admin »</a>
         </div>
+
+        <!--<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+          <img class="rounded-circle" src="img/color/gm.png" alt="Generic placeholder image" width="140" height="140">
+          <h2>Garrys mod Cinema</h2>
+          <div>
+            <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27016&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
+            <p class="ip">IP: oseos.chickenkiller.com:27016</p>
+            <a class="btn btn-info mb-4" href="#" role="button">Web Admin »</a>
+          </div 
+        </div>-->
+
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+          <img class="rounded-circle" src="img/color/gm.png" alt="Generic placeholder image" width="140" height="140">
+          <h2>Garrys mod PropHunt</h2>
+          <div>
+            <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27017&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
+            <p class="ip">IP: oseos.chickenkiller.com:27017</p>
+            <a class="btn btn-info" href="#" role="button">Web Admin »</a>
+          </div>
+        </div>
+
+        <!--<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+          <img class="rounded-circle" src="img/color/gm.png" alt="Generic placeholder image" width="140" height="140">
+          <h2>Garrys mod Cinema SandBox</h2>
+          <div>
+            <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27018&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
+            <p class="ip">IP: oseos.chickenkiller.com:27018</p>
+            <a class="btn btn-info mb-4" href="#" role="button">Web Admin »</a>
+          </div 
+        </div>-->
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/color/kf.png" alt="Generic placeholder image" width="140" height="140">
