--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-
 	<link rel="stylesheet" href="css/main.css" type="text/css">
+
+ 	<!-- Press Start 2P Font-->
+	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+
+	<!-- nostalgic-css-->
+    <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
 
 	<!-- Fontawesome -->
 	<script src="https://use.fontawesome.com/4cfb984545.js"></script>
-
-	<script src="js/main.js"></script>
 
 	<title>Oseos</title>
 </head>
@@ -25,7 +28,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
           <h1 class="title display-4">Oseos server ARG</h1>
-          <p class="subtitle lead my-3">Un proyecto de Estonian Port <a class="icon" href="https://www.linkedin.com/company/estonianport" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+          <p class="subtitle lead my-3">Un proyecto de Estonian Port <a class="icon" href="https://www.linkedin.com/company/estonianport" target="_blank"><i class="nes-icon linkedin"></i></a></p>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
           <div class="text-center mt-5">
@@ -41,38 +44,38 @@
   <!--  ======================= Games Area ================================ -->
 
     <div class="container">
-      <div class="row text-center">
+      <div class="row text-center juegos">
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/color/mc.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Minecraft (Survival)</h2>
           <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:25565&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
           <p class="ip">IP: oseos.chickenkiller.com:25565</p>
-          <a class="btn btn-info" href="#" role="button">Web Admin »</a>
+          <a class="nes-btn is-primary" href="#" role="button">Web Admin »</a>
         </div>
 
-        <!--<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/color/mc.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Minecraft (Dropper)</h2>
           <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:25575&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
           <p class="ip">IP: oseos.chickenkiller.com:25575</p>
-          <a class="btn btn-info" href="#" role="button">Web Admin »</a>
-        </div>-->
+          <a class="nes-btn is-primary" href="#" role="button">Web Admin »</a>
+        </div>
 
-        <!--<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/color/mc.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Minecraft (SkyWars)</h2>
           <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:25585&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
           <p class="ip">IP: oseos.chickenkiller.com:25585</p>
-          <a class="btn btn-info" href="#" role="button">Web Admin »</a>
-        </div>-->
+          <a class="nes-btn is-primary" href="#" role="button">Web Admin »</a>
+        </div>
 
 		<!--<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
           <img class="rounded-circle" src="img/cs.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Counter Stike 1.6 (no steam)</h2>
           <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27019&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
           <p class="ip">IP: oseos.chickenkiller.com:27019</p>
-          <a class="btn btn-info" href="login/login.html?admin=cs" role="button">Web Admin »</a>
+          <a class="nes-btn is-primary" href="login/login.html?admin=cs" role="button">Web Admin »</a>
         </div> -->
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
@@ -80,7 +83,7 @@
           <h2>Counter Stike 1.6</h2>
           <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27020&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
           <p class="ip">IP: oseos.chickenkiller.com:27020</p>
-          <a class="btn btn-info" href="login/login.html?admin=cs" role="button">Web Admin »</a>
+          <a class="nes-btn is-primary" href="login/login.html?admin=cs" role="button">Web Admin »</a>
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
@@ -88,7 +91,7 @@
           <h2>Quake 3</h2>
           <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27960&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
           <p class="ip">IP: oseos.chickenkiller.com:27960</p>
-          <a class="btn btn-info" href="#" role="button">Web Admin »</a>
+          <a class="nes-btn is-primary" href="#" role="button">Web Admin »</a>
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
@@ -96,7 +99,7 @@
           <h2>Team Fortress 2</h2>
           <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27014&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
           <p class="ip">IP: oseos.chickenkiller.com:27014</p>
-          <a class="btn btn-info" href="login/login.html?admin=cs" role="button">Web Admin »</a>
+          <a class="nes-btn is-primary" href="login/login.html?admin=cs" role="button">Web Admin »</a>
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
@@ -104,7 +107,7 @@
           <h2>Day Of Defeat</h2>
           <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27015&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
           <p class="ip">IP: oseos.chickenkiller.com:27015</p>
-          <a class="btn btn-info" href="#" role="button">Web Admin »</a>
+          <a class="nes-btn is-primary" href="#" role="button">Web Admin »</a>
         </div>
 
         <!--<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
@@ -113,7 +116,7 @@
           <div>
             <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27016&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
             <p class="ip">IP: oseos.chickenkiller.com:27016</p>
-            <a class="btn btn-info mb-4" href="#" role="button">Web Admin »</a>
+            <a class="nes-btn is-primary mb-4" href="#" role="button">Web Admin »</a>
           </div 
         </div>-->
 
@@ -123,7 +126,7 @@
           <div>
             <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27017&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
             <p class="ip">IP: oseos.chickenkiller.com:27017</p>
-            <a class="btn btn-info" href="#" role="button">Web Admin »</a>
+            <a class="nes-btn is-primary" href="#" role="button">Web Admin »</a>
           </div>
         </div>
 
@@ -133,7 +136,7 @@
           <div>
             <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:27018&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
             <p class="ip">IP: oseos.chickenkiller.com:27018</p>
-            <a class="btn btn-info mb-4" href="#" role="button">Web Admin »</a>
+            <a class="nes-btn is-primary mb-4" href="#" role="button">Web Admin »</a>
           </div 
         </div>-->
 
@@ -142,7 +145,7 @@
           <h2>Killing Floor</h2>
           <iframe src="https://cache.gametracker.com/components/html0/?host=oseos.chickenkiller.com:7707&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=0&showCurrPlayers=0&showTopPlayers=0&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="164"></iframe>
           <p class="ip">IP: oseos.chickenkiller.com:7707</p>
-          <a class="btn btn-info" href="http://oseos.chickenkiller.com:8075/ServerAdmin/" role="button">Web Admin »</a>
+          <a class="nes-btn is-primary" href="http://oseos.chickenkiller.com:8075/ServerAdmin/" role="button">Web Admin »</a>
         </div>
       
       </div><!-- row -->
