--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+  <title>Oseos</title>
+  <link rel="icon" href="img/oseos-ico.jpg">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -16,7 +18,6 @@
 	<!-- Fontawesome -->
 	<script src="https://use.fontawesome.com/4cfb984545.js"></script>
 
-	<title>Oseos</title>
 </head>
 
   <body>
